adding second time

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@radix-ui/react-dialog": "^1.1.10",
+    "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toast": "^1.2.10",
     "@react-google-maps/api": "^2.20.6",
@@ -19,11 +21,13 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.6.0",
     "lucide-react": "^0.488.0",
     "mime": "^4.0.7",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
